--- a/debuggedlabs-site/src/app/navigation/banner/banner.component.css
+++ b/debuggedlabs-site/src/app/navigation/banner/banner.component.css
@@ -31,16 +31,17 @@
     width:100%;
     border-width: 1px;
     border-color: gray;
+    margin-bottom: 0;
 }
 
 .banner-spacing {
-  height: 100px;
+  height: 80px;
   min-width: 100%;
 }
 
 .logo-div-placeholder{
   width: 25%;
-  height: 100px;
+  height: 50px;
   max-width: 25%;
   max-height: 100px;
 }
