--- a/debuggedlabs-site/src/styles.css
+++ b/debuggedlabs-site/src/styles.css
@@ -50,3 +50,11 @@
   padding: 20px;
   text-align: center;
 }
+
+/* page boundaries */
+.page-boundaries {
+  margin: auto auto;
+  margin-top: 30px;
+  max-width: 1200px;
+  width: calc(100% - (30px * 2));
+}
