--- a/debuggedlabs-site/src/app/modules/featured-post/featured-post.component.css
+++ b/debuggedlabs-site/src/app/modules/featured-post/featured-post.component.css
@@ -1,4 +1,5 @@
 .feature-card{
+    max-width: 400px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-top: 6px solid #000971;
 }
@@ -8,18 +9,32 @@
   transition: 0.3s;
 }
 
+.card-topic {
+    padding-left: 3%;
+    padding-top: 2%;
+    padding-bottom: 0%;
+    margin-bottom: 0;
+}
+
 .card-image {
-    width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
+    max-width: 100%;
+    padding-top: 2%;
+    padding-left: 3%;
+    padding-right: 3%;
 }
 
 .card-title {
-    padding-top: 5%;
-    padding-left: 10%;
+    padding-top: 2%;
+    padding-left: 3%;
+    margin: 0;
 }
 
 .card-teaser {
-    padding-bottom: 10%;
-    padding-left: 10%;
+    padding-top: 2%;
+    padding-left: 3%;
+}
+
+.card-byline {
+    padding-left: 3%;
+    padding-top: 3%;
 }
