--- a/debuggedlabs-site/src/app/modules/featured-post/featured-post.component.css
+++ b/debuggedlabs-site/src/app/modules/featured-post/featured-post.component.css
@@ -2,6 +2,7 @@
     max-width: 400px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-top: 6px solid #000971;
+    margin-bottom: 3%;
 }
 
 .feature-card:hover {
@@ -14,6 +15,10 @@
     padding-top: 2%;
     padding-bottom: 0%;
     margin-bottom: 0;
+    font-family: 'Cairo', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    color: gray;
 }
 
 .card-image {
@@ -23,18 +28,44 @@
     padding-right: 3%;
 }
 
-.card-title {
+.card-title-h2 {
     padding-top: 2%;
     padding-left: 3%;
     margin: 0;
 }
 
-.card-teaser {
-    padding-top: 2%;
+.card-title {
+    font-family: 'Cairo', sans-serif;
+    font-weight: 600;
+    font-size: 32px;
+    color: black;
+    text-decoration: none;
+}
+
+.card-teaser-p {
+    padding-top: 1%;
     padding-left: 3%;
+    margin-bottom: 2%;
+}
+
+.card-teaser {
+    font-family: 'Cairo', sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    color: black;
+    text-decoration: none;
+}
+
+.card-byline-section {
+    padding-right: 3%;
+    padding-top: 3%;
+    padding-bottom: 2%;
 }
 
 .card-byline {
-    padding-left: 3%;
-    padding-top: 3%;
+    padding-right: 3%;
+    font-family: 'Cairo', sans-serif;
+    font-weight: 400;
+    font-size: 13px;
+    color: gray;
 }
