Fixing about image sizing

--- a/src/app/sections/about/about.component.html
+++ b/src/app/sections/about/about.component.html
@@ -32,9 +32,9 @@
 <br>
 
 <!-- About the team -->
-<hr class="abouut-hr">
+<hr class="about-hr">
 <p class="cairo-heading" align="center">THE TEAM</p>
-<hr class="abouut-hr">
+<hr class="about-hr">
 <br>
 
 <div class="horiz-padding" *ngFor="let profile of this.teamProfiles">
