Fixing abouut spelling mistake to about

--- a/src/app/sections/about/about.component.html
+++ b/src/app/sections/about/about.component.html
@@ -16,9 +16,9 @@
 <br>
 
 <!-- About Debugged Labs -->
-<hr class="abouut-hr">
+<hr class="about-hr">
 <p class="cairo-heading" align="center">WHO WE ARE</p>
-<hr class="abouut-hr">
+<hr class="about-hr">
 
 <p class="cairo-paragraph horiz-padding"><b>Debugged Labs</b> is a a <em class="science-sentence">podcast</em>-<em class="technology-sentence">blog</em> founded by two UCLA grads who resent 
     gobbledygook. Our mission is to break down what's happening in technology, science, and society into byte-sized 
