--- a/src/app/modules/post-card/post-card.component.css
+++ b/src/app/modules/post-card/post-card.component.css
@@ -1,11 +1,13 @@
-.feature-card{
+.card{
     max-width: 400px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-top: 6px solid #000971;
     margin-bottom: 3%;
+    position: relative;
+    z-index: -1;
 }
 
-.feature-card:hover {
+.card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
 }
