Adding vertical post card type

--- a/src/app/modules/post-card/post-card.component.html
+++ b/src/app/modules/post-card/post-card.component.html
@@ -1,4 +1,4 @@
-<div class="card" [style.width.%]="getCardWidth()">
+<div class="card" [style.width.%]="getCardWidth()" [style.height.px]="getCardHeight()">
     <p class="card-topic">
         {{ post.topic | uppercase }}
     </p>
