--- a/src/app/modules/post-card/post-card.component.css
+++ b/src/app/modules/post-card/post-card.component.css
@@ -3,8 +3,6 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border-top: 6px solid #000971;
     margin-bottom: 3%;
-    position: relative;
-    z-index: 0;
 }
 
 .card:hover {
@@ -13,7 +11,7 @@
 }
 
 .card-topic {
-    padding-left: 3%;
+    padding-left: 15px;
     padding-top: 2%;
     padding-bottom: 0%;
     margin-bottom: 0;
@@ -26,13 +24,13 @@
 .card-image {
     max-width: 100%;
     padding-top: 2%;
-    padding-left: 3%;
-    padding-right: 3%;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .card-title-h2 {
     padding-top: 2%;
-    padding-left: 3%;
+    padding-left: 15px;
     margin: 0;
 }
 
@@ -45,8 +43,9 @@
 }
 
 .card-teaser-p {
-    padding-top: 1%;
-    padding-left: 3%;
+    padding-top: 10px;
+    padding-left: 15px;
+    padding-right: 10px;
     margin-bottom: 2%;
 }
 
@@ -59,9 +58,9 @@
 }
 
 .card-byline-section {
-    padding-right: 3%;
-    padding-top: 3%;
-    padding-bottom: 2%;
+    padding-right: 15px;
+    padding-top: 10px;
+    padding-bottom: 3%;
 }
 
 .card-byline {
