--- a/src/app/modules/post-card/post-card.component.css
+++ b/src/app/modules/post-card/post-card.component.css
@@ -29,8 +29,9 @@
 }
 
 .card-title-h2 {
-    padding-top: 2%;
+    padding-top: 15px;
     padding-left: 15px;
+    padding-right: 15px;
     margin: 0;
 }
 
@@ -45,7 +46,7 @@
 .card-teaser-p {
     padding-top: 10px;
     padding-left: 15px;
-    padding-right: 10px;
+    padding-right: 15px;
     margin-bottom: 2%;
 }
 
