--- a/src/app/modules/post-card/column-post-card/column-post-card.component.html
+++ b/src/app/modules/post-card/column-post-card/column-post-card.component.html
@@ -1,4 +1,4 @@
-<div class="card" [style.width.%]="getCardWidthInPercentage()" [style.height.px]="getCardHeightInPixels()">
+<div class="card" [style.width.%]="getCardWidthInPercentage()" [style.height.px]="getCardHeightInPixels()" [style.max-width.px]="getMaxWidthInPixels()">
   <p class="card-topic">
     {{ post.topic | uppercase }}
   </p>
