--- a/src/app/modules/posts-list/posts-list.component.html
+++ b/src/app/modules/posts-list/posts-list.component.html
@@ -1,1 +1,11 @@
-<p>posts-list works!</p>
+<!-- E-list -->
+<app-e-list *ngIf="isEList" [posts]="posts"></app-e-list>
+
+<!-- IC-list -->
+<app-ic-list *ngIf="isICList" [posts]="posts"></app-ic-list>
+
+<!-- Gallery-list -->
+<app-gallery-list *ngIf="isGalleryList" [posts]="posts"></app-gallery-list>
+
+<!-- Row-list -->
+<app-row-list *ngIf="isRowList" [posts]="posts"></app-row-list>
