--- a/src/app/sections/frontpage/frontpage.component.html
+++ b/src/app/sections/frontpage/frontpage.component.html
@@ -3,143 +3,150 @@
 
 <div class="page-boundaries">
 
-    <!-- Show featured post -->
-    <app-featured-post [featuredPost]="this.featuredPost"></app-featured-post>
+    <!-- Top posts (ic list) -->
+    <div>
+      <app-posts-list [listType]="1" [posts]="this.topPosts"></app-posts-list>
+    </div>
+
+    <!-- Podcasts subsection (gallery list)
+    <app-posts-list [listType]="2" [posts]="this.topPosts"></app-posts-list> -->
+
+    <!-- Technology subsection (row-list)
+    <app-posts-list [listType]="3" [posts]="this.topPosts"></app-posts-list> -->
+
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
+    <p>frontpage works!</p>
     <p>frontpage works!</p>
 
-
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    
     <p>frontpage works!</p>
     <p>frontpage works!</p>
     <p>frontpage works!</p>
