Adding c-list (formerly e-list) to podcasts and technology page

--- a/src/app/modules/posts-list/posts-list.component.html
+++ b/src/app/modules/posts-list/posts-list.component.html
@@ -1,5 +1,5 @@
-<!-- E-list -->
-<app-e-list *ngIf="isEList" [posts]="posts"></app-e-list>
+<!-- C-list -->
+<app-c-list *ngIf="isCList" [posts]="posts"></app-c-list>
 
 <!-- IC-list -->
 <app-ic-list *ngIf="isICList" [posts]="posts"></app-ic-list>
