--- a/src/app/modules/posts-list/row-list/row-list.component.html
+++ b/src/app/modules/posts-list/row-list/row-list.component.html
@@ -1,3 +1,5 @@
+<p>row-list works!</p>
+
 <div class="row-list">
   <div *ngFor="let i of getIndices()">
     <div class="posts-list" *ngFor="let post of getNextRow(i)">
