--- a/src/app/modules/posts-list/ic-list/ic-list.component.html
+++ b/src/app/modules/posts-list/ic-list/ic-list.component.html
@@ -1,12 +1,11 @@
 <div>
-
   <!-- Featured post -->
   <div [ngClass]="getCardClass(0)" [style.margin-right.%]="getMarginRight()">
     <app-post-card [post]="this.featuredPost" [cardType]="0"></app-post-card>
   </div>
 
   <!-- Vertical post -->
-  <div [ngClass]="getCardClass(1)">
+  <div [ngClass]="getCardClass(1)" [style.margin-right.%]="getMarginRight()">
     <app-post-card [post]="this.verticalPost" [cardType]="1"></app-post-card>
   </div>
 
