--- a/src/app/modules/post-card/rowlist-post-card/rowlist-post-card.component.html
+++ b/src/app/modules/post-card/rowlist-post-card/rowlist-post-card.component.html
@@ -1,1 +1,29 @@
-<p>rowlist-post-card works!</p>
+<div class="card" [style.width.%]="getCardWidthInPercentage()" [style.height.px]="getCardHeightInPixels()"
+  [style.max-width.px]="getMaxWidthInPixels()">
+  <p class="card-topic">
+    {{ post.topic | uppercase }}
+  </p>
+
+  <!-- Featured image -->
+  <a href="{{ post.content }}">
+    <img [src]="post.featuredArtURL" [alt]="post.featuredArtAlt" [ngClass]="getImageClass()">
+  </a>
+
+  <!-- Card title -->
+  <h2 class="card-title-h2">
+    <a href="{{ post.content }}" class="card-title">{{ post.title }}</a>
+  </h2>
+
+
+  <!-- Card teaser -->
+  <p class="card-teaser-p">
+    <a href="{{ post.content }}" class="card-teaser">{{ post.teaser }}</a>
+  </p>
+
+  <!-- Byline -->
+  <p align="right" class="card-byline-section">By
+    <ng-container *ngFor="let author of post.authors">
+      <a class="card-byline" href="{{ author.profilePageUrl }}">{{ author.name | uppercase }}</a>
+    </ng-container>
+  </p>
+</div>
