--- a/src/app/sections/frontpage/frontpage.component.html
+++ b/src/app/sections/frontpage/frontpage.component.html
@@ -4,170 +4,26 @@
 <div class="page-boundaries">
 
     <!-- Top posts (ic list) -->
-    <div>
+    <div class="top-posts">
       <app-posts-list [listType]="1" [posts]="this.topPosts"></app-posts-list>
     </div>
 
+    <a href="/podcasts" class="subsection-header">
+      Podcasts
+    </a>
     <!-- Podcasts subsection (gallery list)
     <app-posts-list [listType]="2" [posts]="this.topPosts"></app-posts-list> -->
 
-    <!-- Technology subsection (row-list)
-    <app-posts-list [listType]="3" [posts]="this.topPosts"></app-posts-list> -->
+    <br>
 
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
+    <!-- Technology subsection (row-list) -->
+    <a href="/technology" class="subsection-header">
+      Technology
+    </a>
+    <div class="technology-posts">
+      <app-posts-list [listType]="3" [posts]="this.technologySectionPosts"></app-posts-list>
+    </div>
 
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
-    <p>frontpage works!</p>
+    <!-- Footer -->
 </div>
 
