--- a/src/app/sections/frontpage/frontpage.component.html
+++ b/src/app/sections/frontpage/frontpage.component.html
@@ -23,7 +23,8 @@
     <div class="technology-posts">
       <app-posts-list [listType]="3" [posts]="this.technologySectionPosts"></app-posts-list>
     </div>
-
-    <!-- Footer -->
 </div>
+
+<!-- Footer -->
+<app-footer></app-footer>
 
